--- a/Ex03_CRUD_JDBC_Eleve/nbproject/project.properties
+++ b/Ex03_CRUD_JDBC_Eleve/nbproject/project.properties
@@ -33,12 +33,14 @@ dist.jar=${dist.dir}/Ex02 - Lecture_JDBC_Eleve.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.mysql-connector-java-8.0.30.jar=F:\\2-EMF\\1-Pro\\Modules\\Modules_3eme\\223\\Exercices\\ex2-lecture-jdbc-ARATY7\\lib\\mysql\\mysql-connector-java-8.0.30.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${javafx.classpath.extension}
+    ${javafx.classpath.extension}:\
+    ${file.reference.mysql-connector-java-8.0.30.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -89,7 +91,7 @@ javafx.enable.concurrent.external.runs=false
 javafx.enabled=true
 javafx.fallback.class=com.javafx.main.NoJavaFXFallback
 # Main class for JavaFX
-javafx.main.class=ex02.lecture_jdbc_eleve.Ex02Lecture_JDBC_Eleve
+javafx.main.class=app.App
 javafx.preloader.class=
 # This project does not use Preloader
 javafx.preloader.enabled=false
